.metadata/.plugins/org.eclipse.cdt.ui/test_cases.build.log
12:58:14 **** Incremental Build of configuration Debug for project test_cases ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L152xE -c -I../Core/Inc -I../Drivers/STM32L1xx_HAL_Driver/Inc -I../Drivers/STM32L1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:213:49: error: unknown type name 'bool'
  213 | void muxSET(uint16_t A, uint16_t B, uint16_t C, bool control){
      |                                                 ^~~~
../Core/Src/main.c:25:1: note: 'bool' is defined in header '<stdbool.h>'; did you forget to '#include <stdbool.h>'?
   24 | #include "stdio.h"
  +++ |+#include <stdbool.h>
   25 | 
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:290:5: warning: implicit declaration of function 'muxSET' [-Wimplicit-function-declaration]
  290 |     muxSET(A_mast, B_mast, C_mast, 1);
      |     ^~~~~~
make: *** [Core/Src/subdir.mk:43: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

12:58:14 Build Failed. 2 errors, 1 warnings. (took 356ms)

